vertical align fixtures

--- a/src/app/components/fixtures/fixtures.component.css
+++ b/src/app/components/fixtures/fixtures.component.css
@@ -60,6 +60,7 @@
 /*Center rows*/
 .table td {
   text-align: center;
+  vertical-align: middle;
   align-content: center;
   max-width: 150px;
 }
